app/assets/stylesheets/pages/blog.scss
// # =================================================================
// # Post Index and Show
// # =================================================================
.postIndex {
  padding: 70px 0 30px;
}

.postAuthor {
  margin-left: 2px;
}

// # Post Itens
// # =================================================================
.postItem {
  border-bottom: 1px solid $gray-light;

  a {
    color: $cyan;

    &:hover,
    &:focus {
      .postTitle {
        color: $cyan;
        transition: all .2s;
      }
    }
  }
}

// # Post Show
// # =================================================================
.postHero {
  position: relative;
  background-size: cover;
  background-position: center center;
}

.postShow {
  color: #3a4145;
  font-family: 'Merriweather', serif;
  padding: 20px 0 70px;

  .postTitle {
    font-size: 2.8rem;
  }
}

// # Post text style
// # =================================================================
.postTitle {
  color: $blue;
  font-family: 'Montserrat', sans-serif;
}

.postText {
  color: #3a4145;
  font-family: 'Merriweather', serif;
  font-size: 1.025rem;
  font-weight: 400;
  line-height: 2rem;

  h1, h2, h3, h4 {
    font-family: 'Montserrat', sans-serif;
    line-height: 1.1em !important;
    color: $blue;
    margin-top: 35px;
  }

  h1 {
    font-size: 2.8rem;
  }

  strong {
    font-family: 'Merriweather', serif;
    font-weight: 700;
  }

  a {
    color: $cyan !important;

    &:hover,
    &:focus {
      color: $cyan;
      transition: all .3s;
      text-decoration: underline;
    }
  }

  blockquote {
    padding-left: 20px;
    margin-bottom: 24px;
    color: $gray-dark;
    border-left: 3px solid $gray-light;
  }

  table {
    display: block;
    width: 100%;
    overflow: auto;
    word-break: keep-all;
    margin-top: 0;
    margin-bottom: 20px;

    tr {
      background-color: #fff;
      border-top: 1px solid $gray-light;
    }

    th {
      font-weight: 700;
    }

    th,
    td {
      padding: 6px 13px;
      border: 1px solid $gray-light;
    }
  }

  ul {
    margin-bottom: 20px;
  }

  .hint {
    margin-top: -10px;
  }
}

.shareButtons {
  display: table;

  iframe {
    vertical-align: middle;
  }

  .buttonFacebook ,
  .buttonTwitter {
    display: table-cell;
    float: left;
  }

  .buttonFacebook {
    padding-right: 5px;
  }

  .buttonTwitter {
    padding-top: 1px;
  }
}


h3.c-cyan {
  font-family: 'Montserrat', sans-serif;

  a {
    color: var(--cyan);

    &:hover,
    &:focus {
      color: var(--cyan);
      text-decoration: underline;
    }
  }
}

